--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,7 +9,8 @@ sites:
   - name: PCL
     url: https://www.primecredit.com
 
-status-website: robotsText: "User-agent: * \n Disallow: /"
+status-website: 
+robotsText: "User-agent: * \n Disallow: /"
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: uptime.tennyy.com
